--- a/server/package.json
+++ b/server/package.json
@@ -8,14 +8,13 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.8.2",
-    "nodemailer": "^6.9.12",
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.1.4"
   },
   "author": "Rishav",
   "license": "ISC"
